@@ -2,7 +2,6 @@ package com.dmdirc.ktirc.sasl
 
 import com.dmdirc.ktirc.IrcClient
 import com.dmdirc.ktirc.SaslConfig
-import com.dmdirc.ktirc.messages.sendAuthenticationMessage
 
 internal class PlainMechanism(private val saslConfig: SaslConfig) : SaslMechanism {
 
@@ -11,7 +10,7 @@ internal class PlainMechanism(private val saslConfig: SaslConfig) : SaslMechanis
 
     override fun handleAuthenticationEvent(client: IrcClient, data: ByteArray?) {
         with (saslConfig) {
-            client.sendAuthenticationMessage("$username\u0000$username\u0000$password".toByteArray().toBase64())
+            client.sendAuthenticationData("$username\u0000$username\u0000$password")
         }
     }
 
