@@ -1,5 +1,6 @@
 vNEXT (in development)
 
+ * Added support for SCRAM-SHA-1 and SCRAM-SHA-256 SASL mechanisms
 
 v0.7.0
 
